@@ -1,3 +1,13 @@
+2014-01-26  David Kilzer  <ddkilzer@apple.com>
+
+        Remove duplicate settings for ENABLE(DISK_IMAGE_CACHE)
+        <http://webkit.org/b/127669>
+
+        Reviewed by Joseph Pecoraro.
+
+        * WebView/WebPreferences.mm:
+        (+[WebPreferences initialize]): Remove duplicate code.
+
 2014-01-24  Andy Estes  <aestes@apple.com>
 
         [iOS] Upstream changes in Tools/DumpRenderTree
